--- a/member-api/src/main/resources/templates/ssescreen.html
+++ b/member-api/src/main/resources/templates/ssescreen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +9,10 @@
 <h1>SSE</h1>
 <div id="output"></div>
 
-<script>
-    const sse = new EventSource("/api/v1/stream/sub/1");
+<script th:inline="javascript">
+    const memberId = /*[[${memberId}]]*/ '1';
+
+    const sse = new EventSource("/api/v1/stream/sub/" + memberId);
 
     sse.addEventListener('login', (e) => {
         const { data: receivedConnectData } = e;
