--- a/member-api/src/main/resources/templates/ssescreen.html
+++ b/member-api/src/main/resources/templates/ssescreen.html
@@ -14,16 +14,16 @@
 
     const sse = new EventSource("/api/v1/stream/sub/" + memberId);
 
-    sse.addEventListener('login', (e) => {
+    sse.addEventListener('notify', (e) => {
         const { data: receivedConnectData } = e;
-        console.log('login event data: ',receivedConnectData);  // "connected!"
+        console.log('notify event data: ',receivedConnectData);
         const outputDiv = document.getElementById("output");
         outputDiv.innerHTML += `<p>${receivedConnectData}</p>`;
     });
 
     sse.onerror = (error) => {
         console.error(`오류: ${error}`);
-        sse.close();
+        // sse.close();
     };
 </script>
 
